Updating pending changes